add wemakelovely.com domain

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "wemakelovely",
   "subdomain": "wemakelovely",
   "domains":[
-    "wemakelove.ly"
+    "wemakelove.ly",
+    "wemakelovely.com"
   ],
   "version": "0.0.0",
   "private": true,
