add wemake.lv domains to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "wemakelovely",
   "subdomain": "wemakelovely",
   "domains":[
+    "wemake.lv",
+    "makes.lv",
+    "wemakelv.com",
     "wemakelove.ly",
     "wemakelovely.com",
     "makeha.us",
